--- a/templates/base.html
+++ b/templates/base.html
@@ -45,11 +45,26 @@
             <li><a href="{{ url_for('register') }}">Register</a></li>
         </ul>
     </header>
+    <section>
+        <!--flash message-->
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="row flashes">
+                        <h4 class="grey lighten-1 center-align">
+                            {{message}}
+                        </h4>
+                    </div>
+                {% endfor%}
+            {% endif %}
+        {% endwith %}
+    </section>
 
 
-    <h1>I'm part of the base template!</h1>
-    {% block content%}
-    {% endblock %}
+    <main class="container">
+        {% block content%}
+        {% endblock %}
+    </main>
 
 <!-- jquery -->
     <script
