--- a/templates/base.html
+++ b/templates/base.html
@@ -24,12 +24,14 @@
                 {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('add_task') }}">New Task</a></li>
-                    <li><a href="#">Manage Categories</a></li>
+                    {% if session.user|lower == "julian"|lower %}
+                        <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+                    {% endif %}
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-                    {% else %}
+                {% else %}
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
-            {% endif %}
+                {% endif %}
                 
             </ul>
             </div>
@@ -43,9 +45,11 @@
             {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('add_task') }}">New Task</a></li>
-                    <li><a href="#">Manage Categories</a></li>
+                    {% if session.user|lower == "julian"|lower %}
+                        <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+                    {% endif %}
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-                {% else %}
+            {% else %}
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
             {% endif %}
