Add option to Add Category to db

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -2,22 +2,27 @@
 
 {% block content%}
     
-<h3 class="black-text text-darken-4 center-align">Manage Categories</h3>
-
-<div class="row">
-    {% for category in categories %}
-    <div class="col s12 m3">
-        <div class="card grey darken-3 center-align">
-            <div class="card-content white-text text-shadow">
-            <span class="card-title">{{category.category_name }}</span>
-            
-            </div>
-            <div class="card-action">
-            <a href="#" class="btn black">Edit</a>
-            <a href="#" class="btn white black-text">Delete</a>
-            </div>
+    <h3 class="black-text text-darken-4 center-align">Manage Categories</h3>
+    
+    <div class="row">
+        <div class="col s12 center-align">
+            <a href="{{ url_for('add_category')}}" class="btn-large black darken-2 text-white">Add Category <i class="fas fa-plus-square right"></i></a>
         </div>
-        </div>
-    {% endfor %}
-  </div>
-  {% endblock%}
+    </div>
+    <div class="row">
+        {% for category in categories %}
+        <div class="col s12 m3">
+            <div class="card grey darken-3 center-align">
+                <div class="card-content white-text text-shadow">
+                <span class="card-title">{{category.category_name }}</span>
+                
+                </div>
+                <div class="card-action">
+                <a href="#" class="btn black">Edit</a>
+                <a href="#" class="btn white black-text">Delete</a>
+                </div>
+            </div>
+            </div>
+        {% endfor %}
+    </div>
+{% endblock%}
