--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -3,6 +3,24 @@
 {% block content%}
     
 <h3 class="black-text text-darken-4 center-align">All Tasks</h3>
+<div class="row card-panel grey lighten-5">
+    <form action="{{url_for('search')}}" method="POST" class="col s12">
+        <div class="row valign-wrapper center-align">
+            <div class="input-field col s12 m8">
+                <i class="fas fa-search prefix white text-white"></i>
+                <input type="text" name="query" id="query" minlength="3" class="Validate" required>
+                <label for="query">Search Task</label>
+            </div>
+            <div class="col s12 m4">
+                <a href="{{ url_for('get_tasks') }}" class="red btn text-shadow">Reset</a>
+                <button type="submit" class="grey daken-4  btn text-shadow">
+                    <i class="fas fa-search left"></i>search
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
+    {% if tasks|length > 0 %}
     <ul class="collapsible">
         {% for task in tasks %}
             <li>
@@ -29,4 +47,7 @@
             </li>
         {% endfor %}
     </ul>
+    {% else %}
+    <h3 class="black-text text-darken-4 center-align">No Result Found</h3>
+    {% endif %}
 {% endblock %}
